# advent-of-code-22

./: Cargo.toml
src/01/: main.rs
src/02/: main.rs
src/03/: main.rs
src/04/: main.rs
src/05/: input.txt  main.rs
src/06/: main.rs
