[package]
name = "advent-of-code-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day-01"
path = "src/01/main.rs"

[[bin]]
name = "day-02"
path = "src/02/main.rs"

[[bin]]
name = "day-03"
path = "src/03/main.rs"

[[bin]]
name = "day-04"
path = "src/04/main.rs"

[[bin]]
name = "day-05"
path = "src/05/main.rs"